# oakd-tutorials

./: .gitignore  README.md
oakd/: COMMANDS.txt  Dockerfile  Dockerfile.lab  config.yaml  requirements.txt  submission.yaml
oakd/assets/setup/: depthai_setup.sh
oakd/launchers/: default.sh  segmentation.sh
oakd/solution/00-disclaimer/: disclaimer.ipynb
oakd/solution/01-basic-integration/: basics.ipynb
oakd/solution/02-oakd-calibration/: oakd-calibration.ipynb
oakd/solution/03-semantic-segmentation/: semantic_segmentation.ipynb
oakd/solution/src/oakd_pkg/: CMakeLists.txt  package.xml  setup.py
oakd/solution/src/oakd_pkg/launch/: oakd_basics.launch  oakd_segmentation.launch
oakd/solution/src/oakd_pkg/models/: frozen_darknet_yolov3_model.mapping  frozen_darknet_yolov3_model.xml
oakd/solution/src/oakd_pkg/src/: basics.ipynb  basics_old.py  oakd_node.py  segmentation_node.py  semantic_segmentation.py
